# atom_notes

./: .gitignore  AGENTS.md  PHASE3_GUARDRAILS.md  README.md  commit_msg.txt  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  tsconfig.tests.json
.github/: pull_request_template.md
docs/: DG1_IMPLEMENTATION_PLAN.md  DG2_IMPLEMENTATION_PLAN.md  DG3_IMPLEMENTATION_PLAN.md  DISCERN_DESIGN_BRIEF_2026-03-25.md  EXTERNAL_REVIEW_RECONCILIATION_2026-03-25.md  LEARNING_LENS_FIRST_PASS.md  MOBILE_MODAL_SURFACE_RECOMMENDATION.md  UI_RULES_ADDENDUM.md  claude_code_tasks_E1_E4.json  codex_epics_and_stories.json  feature_set_engineering_report.md  frontend_consistency_audit.md  phase-2-clarify-the-complex.md  relationship-slice.md  relationship-visual-taxonomy.md
scripts/: fix-test-imports.mjs  run-vitest.mjs
src/: App.tsx  main.tsx  markdownProjection.ts  node-test.d.ts  noteText.ts  relationshipLogic.ts  styles.css  test-shims.d.ts  trace.ts  types.ts  vitest.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/__tests__/: SeasonalViewService.test.ts  actionFragmentSuggestions.test.ts  appNoteOpenLayers.test.tsx  arcPath.test.ts  attachments.test.ts  briefRadial.test.ts  butlerServices.test.ts  canvasClustering.test.ts  canvasLayoutCss.test.ts  canvasNavigation.test.ts  canvasVisibility.test.ts  capturePlacement.test.ts  connectedInsights.test.ts  dataMigration.test.ts  detailSurfaceModel.test.ts  documentModel.test.ts  expandedNote.test.tsx  focusLens.test.ts  inlineLinking.test.ts  (+28 more)
(+186 files in other folders)
